error.log
[2021-04-27 12:35:25 +0800] [1885] [INFO] Starting gunicorn 20.0.4
[2021-04-27 12:35:25 +0800] [1885] [INFO] Listening at: http://0.0.0.0:18000 (1885)
[2021-04-27 12:35:25 +0800] [1885] [INFO] Using worker: sync
[2021-04-27 12:35:25 +0800] [1888] [INFO] Booting worker with pid: 1888
[2021-04-27 12:35:25 +0800] [1889] [INFO] Booting worker with pid: 1889
[2021-04-27 12:36:38,063] ERROR in app: Exception on /api/predict/provmuni [POST]
Traceback (most recent call last):
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/flask/app.py", line 1950, in full_dispatch_request
    rv = self.dispatch_request()
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/flask/app.py", line 1936, in dispatch_request
    return self.view_functions[rule.endpoint](**req.view_args)
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/flask_restful/__init__.py", line 468, in wrapper
    resp = resource(*args, **kwargs)
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/flask/views.py", line 89, in view
    return self.dispatch_request(*args, **kwargs)
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/flask_restful/__init__.py", line 583, in dispatch_request
    resp = meth(*args, **kwargs)
  File "/home/dclab/ynpower/newynpower/ynpowerbackend/app.py", line 836, in post
    result = provincialAndMunicipalPredict(arg)
  File "/home/dclab/ynpower/newynpower/ynpowerbackend/Controller/operate.py", line 314, in provincialAndMunicipalPredict
    result = executeAlgorithm(method, args)
  File "/home/dclab/ynpower/newynpower/ynpowerbackend/dao/interface.py", line 863, in executeAlgorithm
    result = eval("f("+argstr+")")
  File "<string>", line 1, in <module>
  File "/home/dclab/ynpower/newynpower/ynpowerbackend/algorithms/CoordinationCityandProvince.py", line 23, in CoordinationCityandProvince
    data=pd.read_csv(File)
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/pandas/io/parsers.py", line 610, in read_csv
    return _read(filepath_or_buffer, kwds)
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/pandas/io/parsers.py", line 462, in _read
    parser = TextFileReader(filepath_or_buffer, **kwds)
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/pandas/io/parsers.py", line 819, in __init__
    self._engine = self._make_engine(self.engine)
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/pandas/io/parsers.py", line 1050, in _make_engine
    return mapping[engine](self.f, **self.options)  # type: ignore[call-arg]
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/pandas/io/parsers.py", line 1898, in __init__
    self._reader = parsers.TextReader(self.handles.handle, **kwds)
  File "pandas/_libs/parsers.pyx", line 518, in pandas._libs.parsers.TextReader.__cinit__
  File "pandas/_libs/parsers.pyx", line 620, in pandas._libs.parsers.TextReader._get_header
  File "pandas/_libs/parsers.pyx", line 814, in pandas._libs.parsers.TextReader._tokenize_rows
  File "pandas/_libs/parsers.pyx", line 1943, in pandas._libs.parsers.raise_parser_error
UnicodeDecodeError: 'utf-8' codec can't decode byte 0xd4 in position 8: invalid continuation byte
[2021-04-27 12:38:04 +0800] [1885] [CRITICAL] WORKER TIMEOUT (pid:1888)
[2021-04-27 12:38:04 +0800] [1888] [INFO] Worker exiting (pid: 1888)
[2021-04-27 12:38:04 +0800] [3801] [INFO] Booting worker with pid: 3801
[2021-04-27 12:38:04 +0800] [3801] [ERROR] Exception in worker process
Traceback (most recent call last):
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/gunicorn/arbiter.py", line 583, in spawn_worker
    worker.init_process()
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/gunicorn/workers/base.py", line 119, in init_process
    self.load_wsgi()
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/gunicorn/workers/base.py", line 144, in load_wsgi
    self.wsgi = self.app.wsgi()
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/gunicorn/app/wsgiapp.py", line 49, in load
    return self.load_wsgiapp()
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/gunicorn/app/wsgiapp.py", line 39, in load_wsgiapp
    return util.import_app(self.app_uri)
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/site-packages/gunicorn/util.py", line 358, in import_app
    mod = importlib.import_module(module)
  File "/home/dclab/miniconda3/envs/test/lib/python3.7/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1006, in _gcd_import
  File "<frozen importlib._bootstrap>", line 983, in _find_and_load
  File "<frozen importlib._bootstrap>", line 967, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 677, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/dclab/ynpower/newynpower/ynpowerbackend/app.py", line 11
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
[2021-04-27 12:38:04 +0800] [3801] [INFO] Worker exiting (pid: 3801)
[2021-04-27 12:38:04 +0800] [1889] [INFO] Worker exiting (pid: 1889)
[2021-04-27 12:38:05 +0800] [1885] [INFO] Shutting down: Master
[2021-04-27 12:38:05 +0800] [1885] [INFO] Reason: Worker failed to boot.
